started fixing dark mode inconsistencies

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -31,6 +31,7 @@
     --border: 214.3 31.8% 91.4%;
 
     --input: 214.3 31.8% 91.4%;
+    --input-dark: 215 25% 27%;
 
     --ring: 215 20.2% 65.1%;
 
